--- a/index.html
+++ b/index.html
@@ -5,45 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>컨트롤에이, CONTROLA : 즐거운 상상력</title>
     <link rel="icon" href="x" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
     <!-------------------------------구글 아이콘, 제이쿼리, 부트스트랩 cdn------------------------------->
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous">
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-----------------------------------------여기까지----------------------------------------->
 </head>
 <body>
 <div id="wrapper">
+    <div id="loginFormBox">
+        <div id="loginForm">
+            <span data-toggle="modal" data-target="#login">로그인</span>
+            <span data-toggle="modal" data-target="#signUp">회원가입</span>
+        </div>
+    </div>
+    <div class="modal fade" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">로그인</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="id" class="col-form-label">아이디</label>
+                            <input type="text" class="form-control" id="id">
+                        </div>
+                        <div class="form-group">
+                            <label for="pw" class="col-form-label">비밀번호</label>
+                            <input type="password" class="form-control" id="pw">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-info">로그인</button>
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">취소</button>
+                </div>
+            </div>
+        </div>
+    </div><!--로그인-->
+    <div class="modal fade" id="signUp" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel1">회원가입</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="s_name" class="col-form-label">이름</label>
+                            <input type="text" class="form-control" id="s_name">
+                        </div>
+                        <div class="form-group">
+                            <label for="s_id" class="col-form-label">아이디</label>
+                            <input type="text" class="form-control" id="s_id">
+                        </div>
+                        <div class="form-group">
+                            <label for="s_pw" class="col-form-label">비밀번호</label>
+                            <input type="password" class="form-control" id="s_pw">
+                        </div>
+                        <div class="form-group">
+                            <label for="s_checkPW" class="col-form-label">비밀번호 확인</label>
+                            <input type="password" class="form-control" id="s_checkPW">
+                        </div>
+                        <div class="form-group">
+                            <label for="s_email" class="col-form-label">이메일</label>
+                            <input type="email" class="form-control" id="s_email">
+                        </div>
+                        <div class="form-group">
+                            <label for="s_birth" class="col-form-label">생년월일</label>
+                            <input type="password" class="form-control" id="s_birth">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-info">로그인</button>
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">취소</button>
+                </div>
+            </div>
+        </div>
+    </div><!--회원가입-->
     <!--------------------------------사이드 네비-------------------------------------->
     <div id="sideTxt">
         <ul>
-            <li>
-                <a href="#">회사소개서</a>
-            </li>
-            <li>
-                <a href="#">프리넥스트</a>
-            </li>
-            <li>
-                <a href="#">리퀘스트</a>
-            </li>
-            <li>
-                <a href="#">블로그</a>
-            </li>
-            <li>
-                <a href="#">페이스북</a>
-            </li>
-            <li>
-                <a href="#">트위터</a>
-            </li>
+            <li><a href="#">회사소개서</a></li>
+            <li><a href="#">프리넥스트</a></li>
+            <li><a href="#">리퀘스트</a></li>
+            <li><a href="#">블로그</a></li>
+            <li><a href="#">페이스북</a></li>
+            <li><a href="#">트위터</a></li>
         </ul>
     </div>
     <div id="sideBox">
@@ -78,88 +139,61 @@
             <img src="img/icon_top.png" alt="" width="16.5px" height="30px">
         </a>
     </div>
-    <!--------------------------------상단 네비-------------------------------------->
     <!--------------------------------데스크탑네비-------------------------------------->
     <header>
         <nav id="topGnb">
             <a href="index.html">
                 <img src="img/logo_color.png" width="166px" height="28px" alt="">
             </a>
-            <ul>
+            <ul id="topGnbMenu">
                 <li><a href="#">회사소개</a></li>
                 <li><a href="#">사업영역</a></li>
                 <li><a href="method.html">특장점</a></li>
                 <li><a href="work_list.html">포트폴리오</a></li>
                 <li><a href="contactus.html">오시는 길</a></li>
-                <li><a href="#">프로젝트 의뢰</a></li>
+                <li><a href="request.html">프로젝트 의뢰</a></li>
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
             <span class="material-symbols-outlined" id="hamburger">menu</span>
-        </nav>
-        <!--------------------------------데스크탑서브메뉴-------------------------------------->
-        <nav id="subMenu">
-            <ul class="subList">
-                <li>
-                    <a href="company.html">
-                        회사소개
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        주요 서비스
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <nav id="subMenu2">
-            <div id="subMenu2_firstBox">
-                <div id="subMenu2_textBox">
-                    <p>시스템통합</p>
-                </div>
-                <div class="subMenu2_menu">
-                    <ul class="px-0">
-                        <li>
-                            <a href="">-민간·서비스</a>
-                        </li>
-                        <li>
-                            <a href="">-공공</a>
-                        </li>
-                        <li>
-                            <a href="">-헬스케어</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="subMenu2_menu">
-                    <ul>
-                        <li>
-                            <a href="">-금융</a>
-                        </li>
-                        <li>
-                            <a href="">-커머스</a>
-                        </li>
-                        <li>
-                            <a href="">-국방</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div>
-                <p>운영서비스</p>
-            </div>
-            <div>
-                <p>플랫폼</p>
-                <ul class="px-0">
-                    <li>
-                        <a href="">-플러스넷</a>
-                    </li>
-                    <li>
-                        <a href="" id="subMenu2_lastTxt">-PG·VAN 서비스</a>
-                    </li>
-                    <li>
-                        <a href="">-창업서비스</a>
-                    </li>
+            <!--------------------------------데스크탑서브메뉴-------------------------------------->
+            <nav id="subMenu">
+                <ul class="subList">
+                    <li><a href="company.html">회사소개</a></li>
+                    <li><a href="">주요 서비스</a></li>
                 </ul>
-            </div>
+            </nav>
+            <nav id="subMenu2">
+                <div id="subMenu2_firstBox">
+                    <div id="subMenu2_textBox">
+                        <p>시스템통합</p>
+                    </div>
+                    <div class="subMenu2_menu">
+                        <ul class="px-0">
+                            <li><a href="">-민간·서비스</a></li>
+                            <li><a href="">-공공</a></li>
+                            <li><a href="">-헬스케어</a></li>
+                        </ul>
+                    </div>
+                    <div class="subMenu2_menu">
+                        <ul>
+                            <li><a href="">-금융</a></li>
+                            <li><a href="">-커머스</a></li>
+                            <li><a href="">-국방</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <p>운영서비스</p>
+                </div>
+                <div>
+                    <p>플랫폼</p>
+                    <ul class="px-0">
+                        <li><a href="">-플러스넷</a></li>
+                        <li><a href="" id="subMenu2_lastTxt">-PG·VAN 서비스</a></li>
+                        <li><a href="">-창업서비스</a></li>
+                    </ul>
+                </div>
+            </nav>
         </nav>
     </header>
     <!--------------------------------모바일 메뉴-------------------------------------->
@@ -176,39 +210,29 @@
                 <span class="material-symbols-outlined moreBtn1">expand_more</span>
                 <span class="material-symbols-outlined lessBtn1">expand_less</span>
             </li>
-            <div id="subM1">
+            <li id="subM1">
                 <ul>
-                    <li>
-                        <a href="company.html">회사소개</a>
-                    </li>
-                    <li>
-                        <a href="">주요 서비스</a>
-                    </li>
+                    <li><a href="company.html">회사소개</a></li>
+                    <li><a href="">주요 서비스</a></li>
                 </ul>
-            </div>
+            </li>
             <li>
                 <a href="#">사업영역</a>
                 <span class="material-symbols-outlined moreBtn2">expand_more</span>
                 <span class="material-symbols-outlined lessBtn2">expand_less</span>
             </li>
-            <div id="subM2">
+            <li id="subM2">
                 <ul>
                     <li>플랫폼</li>
-                    <li>
-                        <a href="">- 플러스넷</a>
-                    </li>
-                    <li>
-                        <a href="">- 창업서비스</a>
-                    </li>
-                    <li>
-                        <a href="">- PGᆞVAN 서비스</a>
-                    </li>
+                    <li><a href="">- 플러스넷</a></li>
+                    <li><a href="">- 창업서비스</a></li>
+                    <li><a href="">- PGᆞVAN 서비스</a></li>
                 </ul>
-            </div>
+            </li>
             <li><a href="method.html">특장점</a></li>
             <li><a href="work_list.html">포트폴리오</a></li>
             <li><a href="contactus.html">오시는 길</a></li>
-            <li><a href="#">프로젝트 의뢰</a></li>
+            <li><a href="request.html">프로젝트 의뢰</a></li>
         </ul>
     </nav>
     <!--------------------------------carousel-------------------------------------->
@@ -217,13 +241,23 @@
             <li data-target="#carousel1" data-slide-to="0" class="active"></li>
             <li data-target="#carousel1" data-slide-to="1"></li>
             <li data-target="#carousel1" data-slide-to="2"></li>
+            <li data-target="#carousel1" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active carousel-fade">
                     <span class="carousel1">
                         <a href="#">
-                            <p class="t1">Project</p>
+                            <h1 class="t2">디지털기술 중심으로 성공적인<br>
+                            비즈니스 혁신의 파트너가 되겠습니다</h1>
                         </a>
+                        <a href="#">
+                            <p class="t3">Beyond Digital TransFormation</p>
+                        </a>
+                    </span>
+                <img class="d-block w-100" src="img/bg_visual10.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                    <span class="carousel1">
                         <a href="#">
                             <h1 class="t2">LG에너지솔루션 ESSWECARE<br>캠페인 개발</h1>
                         </a>
@@ -236,9 +270,6 @@
             <div class="carousel-item">
                     <span class="carousel1">
                         <a href="">
-                            <p class="t1">Project</p>
-                        </a>
-                        <a href="">
                             <h1 class="t2">Baab# Electric Vehicle<br>Charger App</h1>
                         </a>
                         <a href="">
@@ -249,9 +280,6 @@
             </div>
             <div class="carousel-item">
                     <span class="carousel1">
-                        <a href="">
-                            <p class="t1">Project</p>
-                        </a>
                         <a href="">
                             <h1 class="t2">Seoul Nanumcar<br>Website</h1>
                         </a>
@@ -451,7 +479,7 @@
     $(function (){
 
         let header=$("header");
-        let menuBtn=$("#menu");
+        let menuBtn=$("#hamburger");
         let topGnb=$("#topGnb");
         let mbMenu=$(".mobileGnb")
         let closeBtn=$(".close")
@@ -468,6 +496,7 @@
         let subM2=$("#subM2");
         let subMenu=$("#subMenu");
         let subMenu2=$("#subMenu2");
+        let login=$("#loginFormBox");
         // let subli=$("#subMenu")
 
         /********************topGnb 활성화 및 비활성화********************/
@@ -514,6 +543,7 @@
         menuBtn.click(function (){
             $("body").addClass("hidden");
             topGnb.hide();
+            login.hide();
             mbMenu.show();
             menuBtn.hide();
             closeBtn.show();
@@ -522,6 +552,7 @@
             topGnb.css("background-color","")
             $("body").removeClass("hidden");
             mbMenu.hide();
+            login.show();
             closeBtn.hide();
             menuBtn.show();
             topGnb.show();
